# circular_deps

./: .gitignore  README.md  pixi.toml  sweep.csv  test_combinations.sh
cmake_lib_kinds/: CMakeLists.txt  README.md
cmake_lib_kinds/include/: a.hpp  b.hpp
cmake_lib_kinds/src/: a.cpp  a1.cpp  a2.cpp  b.cpp  main.cpp
missing_dep-multi_source/: CMakeLists.txt  README.md
missing_dep-multi_source/include/: b.hpp
missing_dep-multi_source/src/: main.cpp
missing_dep-one_source/: CMakeLists.txt  CMakePresets.json  README.md
missing_dep-one_source/src/: a.cpp  b.cpp
presets/: CMakePresets.json
